fix: Netlify publish path (dist not app/dist when base=app)

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
 [build]
   base = "app"
   command = "npm ci && npm run build"
-  publish = "app/dist"
+  publish = "dist"
 
 [[redirects]]
   from = "/*"
